--- a/Blurry Loading/style.css
+++ b/Blurry Loading/style.css
@@ -1,16 +1,30 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu");
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+.bg {
+  background: url("https://cdn2.creativecirclemedia.com/chestnuthilllocal/original/20201029-110025-gorillaz.dj.gang.jpg")
+    no-repeat center center/cover;
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  filter: blur(30px);
+}
+
+.loading-text {
+  font-size: 100px;
+  color: black;
 }
