--- a/Random Choice Picker/style.css
+++ b/Random Choice Picker/style.css
@@ -1,5 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Muli&display=swap");
+
 * {
   box-sizing: border-box;
+}
+
+body {
+  background-color: #2b88f0;
+  font-family: "Muli", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
   margin: 0;
-  padding: 0;
+}
+
+h3 {
+  color: white;
+  margin: 10px 0px 20px;
 }
