--- a/Random Choice Picker/style.css
+++ b/Random Choice Picker/style.css
@@ -20,3 +20,28 @@ h3 {
   color: white;
   margin: 10px 0px 20px;
 }
+
+.container {
+  width: 500px;
+}
+
+textarea {
+  border: none;
+  display: block;
+  width: 100%;
+  height: 100px;
+  font-family: inherit;
+  padding: 10px;
+  margin: 0 0 30px;
+  font-size: 16px;
+}
+
+textarea:focus {
+  border-color: rgb(255, 251, 0);
+}
+
+.tag {
+  background-color: rgb(255, 251, 0);
+  padding: 12px;
+  border-radius: 999px 1px;
+}
